Change DTO usage strategy: service layer now receives and returns DTO objects. The findAllStations and findAllStationsWithinRadius were merged to simplify the service. Added MapStruct dependency to map between entities and DTOs